@@ -3,17 +3,9 @@
 <KDevPrjSession>
 <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="5" >
-<Doc0 CursorPosLine="946" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="1" FileName="/home/oliver/work/programming/yammi/yammi/yammimodel.cpp" >
-<View0 Top="23" Width="400" Attach="1" Height="300" Left="3" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc0>
-  <Doc1 CursorPosLine="1119" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
-<View0 Top="21" Width="754" Attach="1" Height="478" Left="21" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc1>
-  <Doc2 CursorPosLine="66" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/configure.in" >
-<View0 Top="65" Width="748" Attach="1" Height="452" Left="45" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc2>
-  <Doc3 CursorPosLine="3" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="1" FileName="/home/oliver/work/programming/yammi/CHANGELOG" >
-<View0 Top="86" Width="748" Attach="1" Height="452" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc3>
-  <Doc4 Type="CDocBrowser" NumberOfViews="1" FileName="/usr/lib/qt3/doc/html//qfiledialog.html#getSaveFileName" >
-<View Top="107" Width="124" Attach="1" Height="116" Left="87" Focus="0" Type="KHTMLView" MinMaxMode="0" />  </Doc4> </DocsAndViews>
+ <DocsAndViews NumberOfDocuments="1" >
+<Doc0 CursorPosLine="169" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi.kdevprj" >
+<View0 Top="0" Width="406" Attach="1" Height="326" Left="0" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc0> </DocsAndViews>
  <CompileConfigs>
 <Release>
 <Architecture>i386</Architecture>
