@@ -1,5 +1,5 @@
 /* XPM */
-static char *newCategory_xpm[]={
+static const char *newCategory_xpm[]={
 "14 14 5 1",
 ". c None",
 "# c #000000",
