@@ -1,7 +1,9 @@
 ######################
 end of january? version 0.7.1
 - little changes to configure.in (no more checking for id3lib, you have to disable it manually if needed)
-- added replacements: %X, %Y, ???
+- added replacements: %X, %Y, %W
+- added "insert into->new category" (finally, Tom!)
+- minor bugfixes
 
 ######################
 14.12.2002 version 0.7
